# hq_seg

./: .gitignore  pyproject.toml
hq_seg/: datasets.py  predictor.py  trainer.py
hq_seg/models/: cross_transformer.py  image_segmenter.py  simple_transformer.py
hq_seg/scripts/: copy_from_pixel_annotation_tool.py  predict_view.py  run_train.py  view_result.py
tests/: test_segment.py
